# remove_margin

./: CMakeLists.txt  README.md  main.cpp  remove_margin.cpp  remove_margin.h  typedef.h
